# tiny-ton

./: .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md
.github/workflows/: test.yml
bindings/: CMakeLists.txt  python_bindings.cpp
docs/: 01-reduce-ops.md  03-gather.md  04-dot-matvec.md  05-softmax.md  06-rmsnorm.md  07-linear.md  08-cross-entropy.md  09-attention.md  10-fused-softmax.md  12-fused-rmsnorm.md  13-fused-attention.md  15-shared-memory.md  16-tiled-gemm.md  17-naive-gemm.md  18-shmem-gemm.md  19-swizzled-gemm.md  20-vec-gemm.md  attention.md  constexpr.md  cross-entropy.md  dot-matvec.md  fused-attention.md  fused-rmsnorm.md  fused-softmax.md  gather.md  linear.md  load.md  relu.md  rmsnorm.md  softmax.md
examples/: attention_test.py  constexpr_test.py  cross_entropy_test.py  cublas_matmul.ipynb  debug_pipeline.py  dot_matvec_test.py  fused_attention_test.py  fused_rmsnorm_test.py  fused_softmax_test.py  gather_test.py  gemm_benchmark.ipynb  linear_test.py  math_intrinsics.py  math_intrinsics_f32.py  microgpt_colab.ipynb  reduce_sum_f32.py  relu_test.py  rmsnorm_test.py  shmem_gemm_test.py  softmax_test.py  swizzled_gemm_test.py  tiled_gemm_test.py  tiled_matvec_test.py  tiny_ton_colab.ipynb  tiny_ton_jetson.ipynb  try_bm16.py  vec_gemm_test.py  vector_add.py  vector_add_f16.py  vector_add_f32.py
include/: CMakeLists.txt
include/tiny-ton/Compiler/: CodeGen.h  Pipeline.h  RegisterAlloc.h
include/tiny-ton/Conversion/: TinyTonToGPU.h
include/tiny-ton/Dialect/TinyTon/: CMakeLists.txt  TinyTonDialect.h  TinyTonDialect.td  TinyTonOps.h  TinyTonOps.td
include/tiny-ton/IR/: Builder.h  ElementType.h
include/tiny-ton/Runtime/: CUDARuntime.h  Runtime.h  Simulator.h
lib/: CMakeLists.txt
lib/Compiler/: CMakeLists.txt  CodeGen.cpp  Pipeline.cpp  RegisterAlloc.cpp
lib/Conversion/: CMakeLists.txt  TinyTonToGPU.cpp
lib/Dialect/TinyTon/: CMakeLists.txt  TinyTonDialect.cpp  TinyTonOps.cpp
lib/IR/: Builder.cpp  CMakeLists.txt
lib/Runtime/: CMakeLists.txt  CUDARuntime.cpp  Runtime.cpp  Simulator.cpp
python/: pyproject.toml
python/tests/: test_vector_add.py
python/tiny_ton/: __init__.py  _buffer.py  jit.py
test/: CMakeLists.txt  lit.cfg.py  test_add_e2e.cpp  test_arith_e2e.cpp  test_codegen.cpp  test_gpu_lowering.cpp  test_masked_load_store_e2e.cpp  test_math_e2e.cpp  test_reduce_e2e.cpp  test_register_alloc.cpp
tools/: CMakeLists.txt
tools/ttc/: CMakeLists.txt  ttc.cpp
