[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tiny-ton"
version = "0.1.0"
description = "A Triton-inspired GPU kernel compiler"
readme = "../README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "numpy",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[tool.setuptools.packages.find]
where = ["."]
