add_library(TinyTonCompiler
  Pipeline.cpp
  RegisterAlloc.cpp
  CodeGen.cpp
)
target_link_libraries(TinyTonCompiler
  PUBLIC
  TinyTonIR
  TinyTonDialect
  TinyTonConversion
  MLIRIR
  MLIRSupport
  MLIRPass
  MLIRGPUDialect
  MLIRGPUToNVVMTransforms
  MLIRArithToLLVM
  MLIRArithDialect
  MLIRMathToLLVM
  MLIRMathDialect
  MLIRMemRefToLLVM
  MLIRControlFlowToLLVM
  MLIRControlFlowDialect
  MLIRFuncToLLVM
  MLIRLLVMCommonConversion
  MLIRReconcileUnrealizedCasts
  MLIRTransformUtils
  MLIRNVVMDialect
  MLIRBuiltinToLLVMIRTranslation
  MLIRNVVMToLLVMIRTranslation
  MLIRLLVMToLLVMIRTranslation
  MLIRTargetLLVMIRExport
  MLIRLLVMDialect
  MLIRSCFDialect
  LLVMLinker
  LLVMBitReader
)
